using System.Collections.Generic;

namespace Game
{
    public class Carta
    {
        private string texto;
        private List<Efeito> efeitos = new();
        
        public void RealizarEfeitos()
        {

        }
    }
}