namespace Game
{
    public enum Cor
    {
        AMARELO,
        AZUL,
        BRANCO,
        LARANJA,
        MARROM,
        VERMELHO,
        ROXO
    }
}