namespace Game
{
    public interface Efeito
    {
        public void RealizarEfeito();
    }
}