using System;

namespace Game
{
    public class EfeitoComprarCarta : Efeito
    {
        public void RealizarEfeito()
        {
            throw new NotImplementedException();
        }

        private void ComprarCarta()
        {
            throw new NotImplementedException();
        }
    }
}