using System;

namespace Game
{
    public class EfeitoHabeasCorpus : Efeito
    {
        public void RealizarEfeito()
        {
            throw new NotImplementedException();
        }

        private void SairDaPrisao()
        {
            throw new NotImplementedException();
        }
    }
}