using System;

namespace Game
{
    public class EfeitoPrisao : Efeito
    {
        public void RealizarEfeito()
        {
            throw new NotImplementedException();
        }

        private bool VerificarHabeasCorpus()
        {
            throw new NotImplementedException();
        }

        private void CobrarMulta()
        {
            throw new NotImplementedException();
        }
    }
}