using System;

namespace Game
{
    public class EfeitoPropriedadeGratis : Efeito
    {
        public void RealizarEfeito()
        {
            throw new NotImplementedException();
        }

        private Propriedade PegarOuPagar()
        {
            throw new NotImplementedException();
        }
    }
}