@startuml diagrama
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity Tabuleiro{
    + Casas : List<Casa>
    + Cartas : List<Carta>
    + Jogadores : List<Jogador>
    ProximoJogador() : void
}

entity Casa{
    - Nome: string
    - Posicao : int   
    - Efeito : Efeito
    + RealizarEfeitos(Tabuleiro) : void
}

entity Propriedade{
    - Preco: int
    - Aluguel: int
    - AluguelDobrado : bool
    + Cor: Cor
    - Proprietario: Jogador
    + ChecarProprietario(Jogador) : void
    + CobrarAluguel(): int
    + Comprar(Jogador): void
}

entity Jogador{
    - Id: int
    - Propriedades: List<Propriedade>
    - Saldo : int
    - Posicao: int
    + Receber(int): void
    + Pagar(int): void
    + JogarDado(): int
    + Mover(int) : void
}

enum Cor{
    AMARELO
    AZUL
    BRANCO
    LARANJA
    VERMELHO
    MARROM
    ROXO
}

entity Carta{
    - Texto : string
    - Efeitos : List<Efeito>
    + RealizarEfeitos(Tabuleiro) : void
}

entity Efeito{
    + RealizarEfeito() : void
}

entity EfeitoEspecialPersonagem{
    - EfeitoComprarCarta : Efeito
    - Personagem : Personagem
    - EscolhePropriedade() : Propriedade
    - EntregarCartaAoPersonagem : void
}

entity EfeitoEscolhePropriedade{
    - Cor1, Cor2 : Cor
    - EscolhePropriedadeCor() : Propriedade
}

entity EfeitoPropriedadeGratis{
    - PegaOuPaga() : Propriedade
}

entity EfeitoTeleporte{
    - Destino : Casa
}

entity EfeitoPassos{
    - Passos : int
    - AndarJogador(int) : void
}

entity EfeitoComprarCarta{
    - ComprarCarta() : void 
}

entity EfeitoTransacao{
    - Transacao : int
}

entity EfeitoHabeasCorpus{
    - SairDaPrisao() : void
}

entity EfeitoMoverOuComprar{
    - EfeitoMover : Efeito
    - EfeitoComprar : Efeito
    - EscolheMoverOuComprar() : Efeito
}

entity EfeitoPrisao{
    - VerificarHabeasCorpus() : bool
    - CobrarMulta() : void
}

Tabuleiro "1" *-- "*" Jogador
Tabuleiro "1" *-- "*" Casa

Casa --> Propriedade
Casa --> VaParaPrisao
Casa --> Prisao
Casa --> CasaInicial
Casa --> Estacionamento
Casa --> Sorte

Jogador "1"  *-- "*" Propriedade

Carta "*" *-- "*" Efeito

Efeito --> EfeitoComprarCarta
Efeito --> EfeitoEscolhePropriedade
Efeito --> EfeitoEspecialPersonagem
Efeito --> EfeitoHabeasCorpus
Efeito --> EfeitoMover
Efeito --> EfeitoMoverOuComprar
Efeito --> EfeitoPassos
Efeito --> EfeitoPropriedadeGratis
Efeito --> EfeitoPrisao

@enduml